# emojigarden

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
static/: index.html
